--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/validator": "^13.15.10",
     "tsx": "^4.21.0"
   }
 }
